feat(layout): 优化布局和可访问性功能
- 将侧边栏容器从 div 改为 nav 元素并添加主导航标签
- 为菜单标题使用 h3 元素提升语义化结构
- 为路由链接添加 aria-current 属性指示当前页面
- 实现移动端侧边栏滑动动画和切换功能
- 在音频播放器中为控件添加无障碍标签
- 为音频播放器按钮添加 aria 标签和状态属性
- 在顶部导航栏中将操作区域改为按钮元素并添加标签
- 为主题选择项添加键盘导航和焦点样式
- 在文件列表中为更多操作按钮添加标签
- 实现上下文菜单的键盘导航支持
- 修复图片预览组件中的导航按钮顺序问题
- 添加全局键盘事件监听支持图片浏览导航
- 优化路由参数传递方式到视频播放页面
- 修复日期格式化工具函数中的字符串截取逻辑
- 优化请求防抖防止并发数据混乱问题
- 修改文件操作 API 的 HTTP 方法和端点路径
- 为表格操作按钮添加更好的语义化标签
- 在清理页面中重新排列按钮顺序以改善用户体验
- 添加减少动画的系统偏好支持样式
- 修复文件上传组件中暂停标识符的数据结构问题